--- a/templates/base.html
+++ b/templates/base.html
@@ -53,6 +53,9 @@
                         Powered by Django, Django-CMS and Zinnia </br>
                         © 2012 OpenRing
                     </div>
+                    <div class="best_viwed" id="" name="">
+                        best viewed in Firefox, Chrome, Opera
+                    </div>
                 </div>
             </div>
 
