links in footer to django, cms and zinnia

--- a/static/css/openring.css
+++ b/static/css/openring.css
@@ -503,4 +503,10 @@ a:link {
     width: 50%;
     float: left;
 }
+.copyright a:hover{
+    text-decoration: underline;
+}
+.copyright a:visited{
+    color: peru;
+}
 /***************** footer end **********************/
