--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,11 @@
             <div id="footer">
                 <div class="footer_container" id="" name="">
                     <div class="copyright" id="" name="">
-                        Powered by Django, Django-CMS and Zinnia </br>
+                        Powered by 
+                        <a href="https://www.djangoproject.com/">Django</a>,
+                        <a href="https://www.django-cms.org/">Django-CMS</a> and
+                        <a href="http://django-blog-zinnia.com/blog/">Zinnia</a>
+                        </br>
                         © 2012 OpenRing
                     </div>
                     <div class="best_viwed" id="" name="">
