--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,9 @@
 
 {% block logo %}
     <!--Logo-->
-    {% placeholder "logo" %}
+    {% placeholder "logo" or %}
+        <img src="{{ STATIC_URL }}images/logo.png" />
+    {% endplaceholder %}
 {% endblock %}
 
 {% block content %}
