added logo as img tag in contact us and zinnia base in templates (i.e placeholder else logo)

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,5 @@
-<!--IMPORTANT : Make sure your home template reverse_id is "home" as it helps to inherit all the placeholders to other pages-->
+<!--IMPORTANT : Make sure your home template reverse_id is "home" as it helps to inherit all the placeholders to other pages
+Currently this does not apply as we are not inheriting any placeholder, but we should ideally -->
 
 {% extends "base.html" %}
 {% load cms_tags %}
