--- a/templates/contactus.html
+++ b/templates/contactus.html
@@ -4,8 +4,17 @@
 
 
 {% block logo %}
-<!--Inherit logo from home-->
-{% show_placeholder "logo" "home" %}
+    {% comment %}
+    <!--Inherit logo from home-->
+    {% show_placeholder "logo" "home" %}
+    {% endcomment %}
+
+    <!--this should be replaced with show_placeholder,-->
+    <!--but for now can not find any other alternative for this-->
+    {% placeholder "contact_logo" or %}
+        <img src="{{ STATIC_URL }}images/logo.png" />
+    {% endplaceholder %}
+
 {% endblock logo %}
 
 {% block content %}
