solved conditional check for placeholders

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,4 @@
-<!--IMPORTANT : Make sure your home template reverse_id is "home" as it helps to inherit all the placeholders to other pages
-Currently this does not apply as we are not inheriting any placeholder, but we should ideally -->
+<!--IMPORTANT : Make sure your home template reverse_id is "home" as it helps to inherit all the placeholders to other pages-->
 
 {% extends "base.html" %}
 {% load cms_tags %}
