--- a/templates/contactus.html
+++ b/templates/contactus.html
@@ -1,19 +1,22 @@
 {% extends "base.html" %}
 {% load cms_tags %}
+{% load capture_as %}
 {% load zinnia_tags i18n %}
 
 
 {% block logo %}
-    {% comment %}
-    <!--Inherit logo from home-->
-    {% show_placeholder "logo" "home" %}
-    {% endcomment %}
 
-    <!--this should be replaced with show_placeholder,-->
-    <!--but for now can not find any other alternative for this-->
-    {% placeholder "contact_logo" or %}
+    <!--capture inherited logo from home-->
+    {% captureas contact_logo %}
+        {% show_placeholder "logo" "home" %}
+    {% endcaptureas %}
+
+    <!--check if inherited content exists-->
+    {% if contact_logo %}
+        {{ contact_logo }}
+    {% else %}
         <img src="{{ STATIC_URL }}images/logo.png" />
-    {% endplaceholder %}
+    {% endif %}
 
 {% endblock logo %}
 
