--- a/templates/zinnia/base.html
+++ b/templates/zinnia/base.html
@@ -7,7 +7,7 @@
 <!--To display breadcrumbs-->
 {% block bread_crumb %}
         <div class="bread_crumbs_container">
-            {% zinnia_breadcrumbs %}
+            <strong>{% zinnia_breadcrumbs %}</strong>
         </div>
         {% include "zinnia/tags/search_form.html" %}
 {% endblock bread_crumb %}
