--- a/sitestatic/zinnia/sass/partials/_layouts.scss
+++ b/sitestatic/zinnia/sass/partials/_layouts.scss
@@ -37,7 +37,7 @@
 @include at-breakpoint($screen-layout) {
   $third: floor($total-columns / 3);
 
-  &, &.right-sidebar {
+  &, &.sidebar-right {
     #content {
       @include span-columns(2 * $third);
     }
@@ -47,20 +47,12 @@
     }
   }
 
-  &.left-sidebar {
+  &.sidebar-left {
     #content {
       @include span-columns(2 * $third omega);
     }
     #sidebar {
       @include span-columns($third);
-    }
-  }
-  &.no-sidebar {
-    #content {
-      @include span-columns($total-columns);
-    }
-    #sidebar {
-      display: none;
     }
   }
 }
