--- a/sitestatic/css/openring.css
+++ b/sitestatic/css/openring.css
@@ -137,6 +137,28 @@ a:link {
     margin: 25px auto 60px;
     padding-bottom: 100px;
 }
+.let_me_read_container {
+    overflow: hidden;
+    padding-right: 38px;
+}
+.let_me_read {
+    background-color: #54A3B4;
+    color: #1C1C1C;
+    cursor: pointer;
+    float: right;
+    font-weight: bold;
+    text-align: center;
+    width: 11%;
+}
+.show_options {
+    background-color: #54A3B4;
+    color: #1C1C1C;
+    cursor: pointer;
+    float: right;
+    font-weight: bold;
+    text-align: center;
+    width: 11%;
+}
 /***************** container end **********************/
 
 /***************** home container start **********************/
