--- a/templates/about.html
+++ b/templates/about.html
@@ -9,7 +9,7 @@
         </div>
         <div class="basic_info_holder">
             <div class="info_row_title">
-                <strong>PRATHAMESH NEVAGI Alias PRATZ</strong>
+                <strong>PRATHAMESH NEVAGI AKA PRATZ</strong>
             </div>
             <div class="info_row">
                 HOBBYIST PROGRAMMER
@@ -18,7 +18,7 @@
                 pratz0909@gmail.com
             </div>
             <div class="info_row">
-                Programming is a art and I will always try to use it to build a better world. I strongly believe in knowledge sharing as I thing knowledge belongs to human world.
+                Programming is a art and I will always try to use it to build a better world. I strongly believe in knowledge sharing as I think knowledge belongs to human world.
             </div>
         </div>
 
@@ -50,7 +50,7 @@
                 INTERESTS
             </div>
             <div class="info_row">
-                Every day I come from office and search for new technologies.
+                Every day after office hours I search for new technologies.
             </div>
             <div class="info_row">
                 I try to cook each and every thing with vim editor.
