--- a/templates/zinnia/base.html
+++ b/templates/zinnia/base.html
@@ -17,10 +17,10 @@
 
 <div class="let_me_read_container" >
     <div class="let_me_read" onClick="letMeRead();">
-        Let me read
+        Hide Options
     </div>
     <div class="show_options" onClick="showOptions();" style="display:none;">
-        Show options
+        Show Options
     </div>
 </div>
 
@@ -62,7 +62,7 @@
         document.getElementsByClassName('blog_entry_tools')[0].style.display = 'none';
 
         // increase width for blog_entry
-        document.getElementsByClassName('blog_entry')[0].style.width = "95%";
+        document.getElementsByClassName('blog_entry')[0].style.width = "100%";
 
         // toggle divs
         document.getElementsByClassName('let_me_read')[0].style.display = 'none';
