--- a/sitestatic/css/openring.css
+++ b/sitestatic/css/openring.css
@@ -459,16 +459,16 @@ a:link {
     width: auto;
 }
 .page {
-    border: 2px solid #54A3B4;
+    border: 2px solid #B0B0B0;
     float: left;
     margin: 8px;
     padding: 0 8px;
     text-align: center;
 }
 .page_current {
-    background: none repeat scroll 0 0 #54A3B4;
-    border: 2px solid #54A3B4;
-    color: #1C1C1C;
+    background: none repeat scroll 0 0 #B0B0B0;
+    border: 2px solid #B0B0B0;
+    color: #F2F1ED;
 }
 .page a{
     color: #7E7F7F;
